Overflows issues fixed & menu interaction added

--- a/css/mylibs/style.css
+++ b/css/mylibs/style.css
@@ -2,7 +2,6 @@ html, body {
     margin: 0;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
@@ -126,7 +125,7 @@ html, body {
 #presentation:after {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 50%;
     height: 80%;
     background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.5) 150%,rgba(0,0,0,.8) 100%);
     content: '';
@@ -190,7 +189,7 @@ html, body {
 /*                    SIDEBAR MENU                    */
 /* ================================================== */
 #sidebarMenu {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 17%;
     height: 100%;
@@ -231,9 +230,16 @@ html, body {
 
 #sidebarMenu #navbar ul li a:hover {
     color: #2E373E;
-    background: #FFF;  
+    background: #FFF;
 }
 
+/* ========================= */
+/*        ACTIVE MENU        */
+/* ========================= */
+.active {
+    background: #FFF;
+    color: #75B8BD !important;
+}
 
 
 /* ================================================== */
@@ -456,7 +462,7 @@ html, body {
     font-size: 15px;
 }
 
-#cv .career-information:after {
+#cv .career-information::after {
     position: absolute;
     top: 50%;
     right: 100%;
@@ -544,7 +550,7 @@ html, body {
     font-weight: bold;
 }
 
-.slick-prev:before, .slick-next:before {
+.slick-prev::before, .slick-next::before {
     opacity: 1;
 }
 
@@ -612,7 +618,7 @@ html, body {
     color: #FFF;
 }
 
-#contactme #informations div:nth-of-type(2), #contactme #informations div:nth-of-type(3) {
+#contactme #informations div:nth-child(2), #contactme #informations div:nth-child(3) {
     margin-left: 100px;
 }
 
@@ -652,6 +658,9 @@ html, body {
     text-decoration: none;
 }
 
+#informations i:hover, #informations span:hover {
+    box-shadow: 0 0 20px #fff;
+}
 /* ========================= */
 /*           FOOTER          */
 /* ========================= */
